--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -1936,13 +1936,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 67.106s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_model_selectors import TestSelectors\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestSelectors())\n",
@@ -1967,13 +1989,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Number of word models returned = 112\n"
+     ]
+    }
+   ],
    "source": [
     "# autoreload for automatically reloading changes made in my_model_selectors and my_recognizer\n",
     "%load_ext autoreload\n",
@@ -2012,13 +2044,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of test set items: 178\n",
+      "Number of test set sentences: 40\n"
+     ]
+    }
+   ],
    "source": [
     "test_set = asl.build_test(features_ground)\n",
     "print(\"Number of test set items: {}\".format(test_set.num_items))\n",
@@ -2041,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -2056,17 +2097,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.6179775280898876\n",
+      "Total correct: 68 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN *LOVE HOMEWORK                                           JOHN WRITE HOMEWORK\n",
+      "    7: JOHN *STUDENT *GIVE1 *STUDENT                                 JOHN CAN GO CAN\n",
+      "   12: JOHN CAN *GO1 CAN                                             JOHN CAN GO CAN\n",
+      "   21: *MARY *MARY WONT *MARY *CAR *TOMORROW *FUTURE *MARY           JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *IX *MARY IX IX                                          JOHN LIKE IX IX IX\n",
+      "   28: JOHN *MARY *JOHN IX *SHOULD                                   JOHN LIKE IX IX IX\n",
+      "   30: JOHN *IX IX *JOHN IX                                          JOHN LIKE IX IX IX\n",
+      "   36: *JOHN *JOHN *JOHN IX *MARY *MARY                              MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: *MARY IX *JOHN MARY *MARY                                     JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *IX *FINISH HOUSE                                        JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN JOHN BUY CAR *MARY                                      FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN *JOHN *JOHN BUY HOUSE                                    JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *MARY *JOHN *IX *IX                                           JOHN DECIDE VISIT MARY\n",
+      "   67: JOHN *JOHN *MARY BUY HOUSE                                    JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *MARY VISIT MARY                                         JOHN WILL VISIT MARY\n",
+      "   74: JOHN *JOHN *IX MARY                                           JOHN NOT VISIT MARY\n",
+      "   77: *JOHN *CAR MARY                                               ANN BLAME MARY\n",
+      "   84: *JOHN *GIVE1 *IX BOOK                                         IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *MARY *JOHN *IX *IX *JOHN *WHAT *CAN                          JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN *JOHN *JOHN *IX *IX *JOHN                                JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *IX *JOHN *IX *IX BOOK                                   JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: *JOHN NEW CAR BREAK-DOWN                                      POSS NEW CAR BREAK-DOWN\n",
+      "  105: JOHN *JOHN                                                    JOHN LEG\n",
+      "  107: JOHN *JOHN FRIEND *JOHN *MARY                                 JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *JOHN *MOVIE                                                  WOMAN ARRIVE\n",
+      "  113: *JOHN CAR *MARY *MARY *GIVE1                                  IX CAR BLUE SUE BUY\n",
+      "  119: *JOHN *BUY1 IX CAR *MARY                                      SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *ARRIVE *WHAT                                            JOHN READ BOOK\n",
+      "  139: JOHN *BUY1 WHAT *JOHN *MARY                                   JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY *FUTURE WHAT *MARY                                   JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: *ARRIVE JOHN *JOHN                                            LOVE JOHN WHO\n",
+      "  167: JOHN IX *IX *CAR *WHAT                                        JOHN IX SAY LOVE MARY\n",
+      "  171: JOHN *JOHN BLAME                                              JOHN MARY BLAME\n",
+      "  174: *GIVE1 *MARY GIVE1 *MARY *FINISH                              PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: JOHN *GIVE1                                                   JOHN ARRIVE\n",
+      "  184: *IX *JOHN *GIVE1 *WHO *MARY                                   ALL BOY GIVE TEACHER APPLE\n",
+      "  189: JOHN *JOHN *JOHN *ARRIVE                                      JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *IX *WOMAN BOX                                           JOHN GIVE GIRL BOX\n",
+      "  199: *JOHN *WHAT *MARY                                             LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *IX MARY *IX BUY HOUSE                                   JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Choose a feature set and model selector\n",
-    "features = features_ground # change as needed\n",
-    "model_selector = SelectorConstant # change as needed\n",
+    "features = features_delta # change as needed\n",
+    "model_selector = SelectorBIC # change as needed\n",
     "\n",
     "# TODO Recognize the test set and display the result with the show_errors method\n",
     "models = train_all_words(features, model_selector)\n",
@@ -2129,13 +2222,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 35.503s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_recognizer import TestRecognize\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestRecognize())\n",
