--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,7 +164,7 @@
        "      4         149     181      170      175     161      62  woman-1"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3358,7 +3358,114 @@
    "source": [
     "**Question 3:**  Summarize the error results from three combinations of features and model selectors.  What was the \"best\" combination and why?  What additional information might we use to improve our WER?  For more insight on improving WER, take a look at the introduction to Part 4.\n",
     "\n",
-    "**Answer 3:**"
+    "**Answer 3:**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SelectorConstant</th>\n",
+       "      <th>SelectorBIC</th>\n",
+       "      <th>SelectorDIC</th>\n",
+       "      <th>SelectorCV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>(Total correct/178, WER)</th>\n",
+       "      <td>(Total correct, WER)</td>\n",
+       "      <td>(Total correct, WER)</td>\n",
+       "      <td>(Total correct, WER)</td>\n",
+       "      <td>(Total correct, WER)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>features_ground</th>\n",
+       "      <td>59, 0.6685</td>\n",
+       "      <td>80, 0.5506</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>features_norm</th>\n",
+       "      <td>67, 0.6236</td>\n",
+       "      <td>69, 0.6124</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>features_polar</th>\n",
+       "      <td>68, 0.6180</td>\n",
+       "      <td>81, 0.5449</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>features_delta</th>\n",
+       "      <td>64, 0.6404</td>\n",
+       "      <td>68, 0.6180</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>features_custom_linear</th>\n",
+       "      <td>88, 0.5056</td>\n",
+       "      <td>74, 0.5843</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>features_custom_polar</th>\n",
+       "      <td>71, 0.6011</td>\n",
+       "      <td>80, 0.5506</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              SelectorConstant           SelectorBIC  \\\n",
+       "(Total correct/178, WER)  (Total correct, WER)  (Total correct, WER)   \n",
+       "features_ground                     59, 0.6685            80, 0.5506   \n",
+       "features_norm                       67, 0.6236            69, 0.6124   \n",
+       "features_polar                      68, 0.6180            81, 0.5449   \n",
+       "features_delta                      64, 0.6404            68, 0.6180   \n",
+       "features_custom_linear              88, 0.5056            74, 0.5843   \n",
+       "features_custom_polar               71, 0.6011            80, 0.5506   \n",
+       "\n",
+       "                                   SelectorDIC            SelectorCV  \n",
+       "(Total correct/178, WER)  (Total correct, WER)  (Total correct, WER)  \n",
+       "features_ground                            NaN                   NaN  \n",
+       "features_norm                              NaN                   NaN  \n",
+       "features_polar                             NaN                   NaN  \n",
+       "features_delta                             NaN                   NaN  \n",
+       "features_custom_linear                     NaN                   NaN  \n",
+       "features_custom_polar                      NaN                   NaN  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_excel('Results.xlsx')"
    ]
   },
   {
