--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,7 +164,7 @@
        "      4         149     181      170      175     161      62  woman-1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +1900,11 @@
    "source": [
     "**Question 2:**  Compare and contrast the possible advantages and disadvantages of the various model selectors implemented.\n",
     "\n",
-    "**Answer 2:**"
+    "**Answer 2:** **Possible** advantages and disadvantages of the model selectors.\n",
+    "After analyzing the results I have so far:\n",
+    "- **BIC:** I can say that in terms of time selectorBIC peforms better. This makes sense since BIC uses a less complex model.Faster processing time is the advantage, but less accuracy can be a disadvantage.\n",
+    "- **DIC:** In most of the cases, this model is fitted using all the possible hidden states. That can be considered as an advantage. Time consumption is a disadvantage here.\n",
+    "\n"
    ]
   },
   {
@@ -3358,13 +3362,18 @@
    "source": [
     "**Question 3:**  Summarize the error results from three combinations of features and model selectors.  What was the \"best\" combination and why?  What additional information might we use to improve our WER?  For more insight on improving WER, take a look at the introduction to Part 4.\n",
     "\n",
-    "**Answer 3:**\n",
-    "\n"
+    "**Answer 3:** I have summerized the results I obtained in the below table.\n",
+    "- I can clearly conclude that features_delta set is the worst performinng set for all the consdiered selector models. For all the models WER > 0.6 for this feature set.\n",
+    "- The coustom feature set,features_custom_linear gave relatively small error for all the four models that we considered  WER<0.6 for all the models) .\n",
+    "- SelectorDIC and SelectorCV models performed relatively better for for all the feature sets except features_delta.\n",
+    "- SelectorConstant can be considered as the worst model since it gave bad results for most of the feature sets.\n",
+    "- It is difficult to solidly conclude which model/feature set  is the best. Each model shows different results based on the feature set. After tanking all the results in to account, \n",
+    "I can conclude that SelectorDIC and SelectorCV models are relatively better for the feature sets that we chose.Since those two models give WER < 0.6 for  most of the feature sets.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -3397,43 +3406,43 @@
        "      <th>features_ground</th>\n",
        "      <td>59, 0.6685</td>\n",
        "      <td>80, 0.5506</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>76, 0.5730</td>\n",
+       "      <td>81, 0.5449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>features_norm</th>\n",
        "      <td>67, 0.6236</td>\n",
        "      <td>69, 0.6124</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>72, 0.5955</td>\n",
+       "      <td>73, 0.5899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>features_polar</th>\n",
        "      <td>68, 0.6180</td>\n",
        "      <td>81, 0.5449</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>81, 0.5449</td>\n",
+       "      <td>76, 0.5730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>features_delta</th>\n",
        "      <td>64, 0.6404</td>\n",
        "      <td>68, 0.6180</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>66, 0.6292</td>\n",
+       "      <td>66, 0.6292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>features_custom_linear</th>\n",
        "      <td>88, 0.5056</td>\n",
        "      <td>74, 0.5843</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>74, 0.5843</td>\n",
+       "      <td>73, 0.5899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>features_custom_polar</th>\n",
        "      <td>71, 0.6011</td>\n",
        "      <td>80, 0.5506</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>84, 0.5281</td>\n",
+       "      <td>83, 0.5337</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3451,15 +3460,15 @@
        "\n",
        "                                   SelectorDIC            SelectorCV  \n",
        "(Total correct/178, WER)  (Total correct, WER)  (Total correct, WER)  \n",
-       "features_ground                            NaN                   NaN  \n",
-       "features_norm                              NaN                   NaN  \n",
-       "features_polar                             NaN                   NaN  \n",
-       "features_delta                             NaN                   NaN  \n",
-       "features_custom_linear                     NaN                   NaN  \n",
-       "features_custom_polar                      NaN                   NaN  "
+       "features_ground                     76, 0.5730            81, 0.5449  \n",
+       "features_norm                       72, 0.5955            73, 0.5899  \n",
+       "features_polar                      81, 0.5449           76, 0.5730   \n",
+       "features_delta                    66, 0.6292             66, 0.6292   \n",
+       "features_custom_linear             74, 0.5843             73, 0.5899  \n",
+       "features_custom_polar               84, 0.5281            83, 0.5337  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
